--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,13 +8,14 @@
     "@testing-library/user-event": "^7.2.1",
     "antd": "^3.26.12",
     "axios": "^0.19.2",
-    "react": "^16.13.0",
-    "react-dom": "^16.13.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-infinite-scroll-component": "^5.0.4",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "react-virtualized": "^9.21.2",
+    "reactstrap": "^8.4.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "semantic-ui-react": "^0.88.2",
