--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 aioredis==1.3.1
-asgiref==3.2.3
+asgiref==3.2.7
 async-timeout==3.0.1
 attrs==19.3.0
-autobahn==20.3.1
+autobahn==20.4.1
 Automat==20.2.0
 certifi==2019.11.28
 cffi==1.14.0
@@ -10,10 +10,10 @@ channels==2.4.0
 channels-redis==2.4.2
 chardet==3.0.4
 constantly==15.1.0
-cryptography==2.8
+cryptography==2.9
 daphne==2.4.1
 defusedxml==0.6.0
-Django==3.0.3
+Django==3.0.5
 django-allauth==0.41.0
 django-cors-headers==3.2.1
 django-rest-auth==0.9.5
@@ -27,11 +27,13 @@ msgpack==0.6.2
 mysqlclient==1.4.6
 oauthlib==3.1.0
 Pillow==7.0.0
+pip-install-test==0.5
 pkg-resources==0.0.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.20
 PyHamcrest==2.0.2
+pymongo==3.10.1
 PyMySQL==0.9.3
 pyOpenSSL==19.1.0
 python3-openid==3.1.0
@@ -40,9 +42,9 @@ requests==2.23.0
 requests-oauthlib==1.3.0
 service-identity==18.1.0
 six==1.14.0
-sqlparse==0.3.0
+sqlparse==0.3.1
 Twisted==20.3.0
-txaio==20.3.1
+txaio==20.4.1
 urllib3==1.25.8
 whitenoise==3.3.1
-zope.interface==5.0.1
+zope.interface==5.1.0
