--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "reactstrap": "^8.4.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "semantic-ui-icon": "^2.3.3",
     "semantic-ui-react": "^0.88.2",
     "thunk": "0.0.1"
   },
