--- a/requirements.txt
+++ b/requirements.txt
@@ -10,34 +10,30 @@ channels==2.4.0
 channels-redis==2.4.2
 chardet==3.0.4
 constantly==15.1.0
-cryptography==2.9
+cryptography==2.8
 daphne==2.4.1
 defusedxml==0.6.0
-Django==3.0.5
+Django==3.0.4
 django-allauth==0.41.0
 django-cors-headers==3.2.1
 django-rest-auth==0.9.5
 djangorestframework==3.11.0
-gunicorn==19.7.1
 hiredis==1.0.1
 hyperlink==19.0.0
 idna==2.9
 incremental==17.5.0
 msgpack==0.6.2
-mysqlclient==1.4.6
 oauthlib==3.1.0
 Pillow==7.0.0
-pip-install-test==0.5
-pkg-resources==0.0.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.20
 PyHamcrest==2.0.2
-pymongo==3.10.1
 PyMySQL==0.9.3
 pyOpenSSL==19.1.0
 python3-openid==3.1.0
 pytz==2019.3
+redis==3.4.1
 requests==2.23.0
 requests-oauthlib==1.3.0
 service-identity==18.1.0
@@ -46,5 +42,4 @@ sqlparse==0.3.1
 Twisted==20.3.0
 txaio==20.4.1
 urllib3==1.25.8
-whitenoise==3.3.1
-zope.interface==5.1.0
+zope.interface==5.0.2
