--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "4.0.0-rc.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.1",
     "@testing-library/user-event": "^7.2.1",
@@ -23,7 +24,7 @@
     "semantic-ui-icon": "^2.3.3",
     "semantic-ui-react": "^0.88.2",
     "thunk": "0.0.1",
-    "@ant-design/icons": "4.0.0-rc.0"
+    "typescript": "^3.8.3"
   },
   "scripts": {
     "start": "react-scripts start",
