--- a/requirements.txt
+++ b/requirements.txt
@@ -1,45 +1,92 @@
-aioredis==1.3.1
-asgiref==3.2.7
-async-timeout==3.0.1
-attrs==19.3.0
-autobahn==20.4.1
-Automat==20.2.0
-certifi==2019.11.28
-cffi==1.14.0
-channels==2.4.0
-channels-redis==2.4.2
+appdirs==1.4.3
+apturl==0.5.2
+asgiref==3.2.3
+asn1crypto==0.24.0
+astroid==2.2.5
+autopep8==1.4.4
+Brlapi==0.6.6
+certifi==2019.6.16
 chardet==3.0.4
-constantly==15.1.0
-cryptography==2.8
-daphne==2.4.1
+command-not-found==0.3
+cryptography==2.1.4
+cupshelpers==1.0
+defer==1.0.6
 defusedxml==0.6.0
-Django==3.0.4
-django-allauth==0.41.0
-django-cors-headers==3.2.1
+dell-recovery==0.0.0
+distlib==0.3.0
+distro-info===0.18ubuntu0.18.04.1
+Django==2.2.10
+django-allauth==0.39.1
+django-cors-headers==3.0.2
 django-rest-auth==0.9.5
-djangorestframework==3.11.0
-hiredis==1.0.1
-hyperlink==19.0.0
-idna==2.9
-incremental==17.5.0
-msgpack==0.6.2
-oauthlib==3.1.0
-Pillow==7.0.0
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycparser==2.20
-PyHamcrest==2.0.2
-PyMySQL==0.9.3
-pyOpenSSL==19.1.0
+djangorestframework==3.9.4
+filelock==3.0.12
+gunicorn==19.9.0
+httplib2==0.9.2
+idna==2.8
+importlib-metadata==1.5.0
+importlib-resources==1.0.2
+isort==4.3.21
+keyring==10.6.0
+keyrings.alt==3.0
+language-selector==0.1
+launchpadlib==1.10.6
+lazr.restfulclient==0.13.5
+lazr.uri==1.0.3
+lazy-object-proxy==1.4.1
+louis==3.5.0
+macaroonbakery==1.1.3
+Mako==1.0.7
+MarkupSafe==1.0
+mccabe==0.6.1
+netifaces==0.10.4
+oauth==1.0.1
+oauthlib==3.0.1
+olefile==0.45.1
+pep8==1.7.1
+pexpect==4.2.1
+Pillow==5.1.0
+pipenv==2018.11.26
+progressbar==2.3
+protobuf==3.0.0
+pycairo==1.16.2
+pycodestyle==2.5.0
+pycrypto==2.6.1
+pycups==1.9.73
+pygobject==3.26.1
+pylint==2.3.1
+pymacaroons==0.13.0
+PyMySQL==0.8.0
+PyNaCl==1.1.2
+pyRFC3339==1.0
+python-apt==1.6.5+ubuntu0.2
+python-dateutil==2.6.1
+python-debian==0.1.32
 python3-openid==3.1.0
-pytz==2019.3
-redis==3.4.1
-requests==2.23.0
-requests-oauthlib==1.3.0
-service-identity==18.1.0
-six==1.14.0
-sqlparse==0.3.1
-Twisted==20.3.0
-txaio==20.4.1
-urllib3==1.25.8
-zope.interface==5.0.2
+pytz==2019.1
+pyxdg==0.25
+PyYAML==3.12
+reportlab==3.4.0
+requests==2.22.0
+requests-oauthlib==1.2.0
+requests-unixsocket==0.1.5
+screen-resolution-extra==0.0.0
+SecretStorage==2.3.1
+simplejson==3.13.2
+six==1.12.0
+sqlparse==0.3.0
+system-service==0.3
+systemd-python==234
+typed-ast==1.4.0
+ubuntu-drivers-common==0.0.0
+ufw==0.36
+unattended-upgrades==0.1
+urllib3==1.25.3
+usb-creator==0.3.3
+virtualenv==20.0.4
+virtualenv-clone==0.5.3
+wadllib==1.3.2
+wrapt==1.11.2
+xkit==0.0.0
+zipp==3.0.0
+zope.interface==4.3.2
