--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "antd": "^3.26.12",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
+    "date-fns": "^2.13.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.0",
     "react-dom": "^16.13.1",
@@ -20,6 +21,7 @@
     "react-virtualized": "^9.21.2",
     "reactstrap": "^8.4.1",
     "redux": "^4.0.5",
+    "redux-form": "^8.3.5",
     "redux-thunk": "^2.3.0",
     "semantic-ui-icon": "^2.3.3",
     "semantic-ui-react": "^0.88.2",
