--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,8 +8,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.1",
     "@testing-library/user-event": "^7.2.1",
-    "antd": "^Version
-4.5.2",
+    "antd": "^4.5.2",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "date-fns": "^2.13.0",
