--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
-.asgiref==3.2.7
+aioredis==1.3.1
+asgiref==3.2.7
+async-timeout==3.0.1
 attrs==19.3.0
 autobahn==20.6.1
 Automat==20.2.0
 certifi==2020.4.5.2
 cffi==1.14.0
 channels==2.4.0
+channels-redis==3.0.0
 chardet==3.0.4
 constantly==15.1.0
 cryptography==2.9.2
@@ -13,11 +16,14 @@ defusedxml==0.6.0
 Django==3.0.7
 django-allauth==0.42.0
 django-cors-headers==3.3.0
+django-environ==0.4.5
 django-rest-auth==0.9.5
 djangorestframework==3.11.0
+hiredis==1.0.1
 hyperlink==19.0.0
 idna==2.9
 incremental==17.5.0
+msgpack==1.0.0
 oauthlib==3.1.0
 Pillow==7.1.2
 pyasn1==0.4.8
