--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,7 @@ incremental==17.5.0
 msgpack==1.0.0
 oauthlib==3.1.0
 Pillow==7.1.2
+pkg-resources==0.0.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.20
