--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/compatible": "^1.0.8",
     "@ant-design/icons": "^4.0.0-rc.0",
     "@ant-design/pro-layout": "^5.0.17",
     "@testing-library/jest-dom": "^4.2.4",
