--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,32 +4,32 @@
   "private": true,
   "dependencies": {
     "@ant-design/compatible": "^1.0.8",
-    "@ant-design/icons": "^4.0.0-rc.0",
-    "@ant-design/pro-layout": "^5.0.17",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.4.1",
-    "@testing-library/user-event": "^7.2.1",
-    "antd": "^4.5.2",
-    "axios": "^0.19.2",
-    "bootstrap": "^4.4.1",
-    "date-fns": "^2.13.0",
+    "@ant-design/icons": "^4.3.0",
+    "@ant-design/pro-layout": "^6.8.0",
+    "@testing-library/jest-dom": "^5.11.6",
+    "@testing-library/react": "^11.2.2",
+    "@testing-library/user-event": "^12.6.0",
+    "antd": "^4.9.4",
+    "axios": "^0.21.1",
+    "bootstrap": "^4.5.3",
+    "date-fns": "^2.16.1",
     "rc-queue-anim": "^1.8.5",
-    "react": "^16.13.1",
-    "react-bootstrap": "^1.0.0",
-    "react-dom": "^16.13.1",
-    "react-infinite-scroll-component": "^5.0.4",
-    "react-redux": "^7.2.0",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.0",
-    "react-virtualized": "^9.21.2",
-    "reactstrap": "^8.4.1",
+    "react": "^17.0.1",
+    "react-bootstrap": "^1.4.0",
+    "react-dom": "^17.0.1",
+    "react-infinite-scroll-component": "^5.1.0",
+    "react-redux": "^7.2.2",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "4.0.1",
+    "react-virtualized": "^9.22.3",
+    "reactstrap": "^8.7.1",
     "redux": "^4.0.5",
-    "redux-form": "^8.3.5",
+    "redux-form": "^8.3.7",
     "redux-thunk": "^2.3.0",
     "semantic-ui-icon": "^2.3.3",
-    "semantic-ui-react": "^0.88.2",
+    "semantic-ui-react": "^2.0.1",
     "thunk": "0.0.1",
-    "typescript": "^3.8.3"
+    "typescript": "^4.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
