--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,73 @@
+aioredis==1.3.1
 asgiref==3.2.7
-Django==3.0.5
+async-timeout==3.0.1
+attrs==19.3.0
+autobahn==20.6.1
+Automat==20.2.0
+awsebcli==3.19.2
+bcrypt==3.2.0
+blessed==1.17.12
+botocore==1.19.47
+cached-property==1.5.2
+cement==2.8.2
+certifi==2020.4.5.2
+cffi==1.14.0
+channels==2.4.0
+channels-redis==3.0.0
+chardet==3.0.4
+colorama==0.4.3
+constantly==15.1.0
+cryptography==2.9.2
+daphne==2.5.0
+defusedxml==0.6.0
+Django==3.0.7
+django-allauth==0.42.0
+django-cors-headers==3.3.0
+django-environ==0.4.5
+django-rest-auth==0.9.5
 djangorestframework==3.11.0
-pkg-resources==0.0.0
-pytz==2019.3
+docker==4.4.1
+docker-compose==1.25.5
+dockerpty==0.4.1
+docopt==0.6.2
+future==0.16.0
+hiredis==1.0.1
+hyperlink==19.0.0
+idna==2.9
+importlib-metadata==3.3.0
+incremental==17.5.0
+jmespath==0.10.0
+jsonschema==3.2.0
+msgpack==1.0.0
+oauthlib==3.1.0
+paramiko==2.7.2
+pathspec==0.5.9
+Pillow==7.1.2
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.20
+PyHamcrest==2.0.2
+PyMySQL==0.9.3
+PyNaCl==1.4.0
+pyOpenSSL==19.1.0
+pyrsistent==0.17.3
+python-dateutil==2.8.1
+python3-openid==3.1.0
+pytz==2020.1
+PyYAML==5.3.1
+requests==2.23.0
+requests-oauthlib==1.3.0
+semantic-version==2.5.0
+service-identity==18.1.0
+six==1.15.0
 sqlparse==0.3.1
+termcolor==1.1.0
+texttable==1.6.3
+Twisted==20.3.0
+txaio==20.4.1
+typing-extensions==3.7.4.3
+urllib3==1.25.9
+wcwidth==0.1.9
+websocket-client==0.57.0
+zipp==3.4.0
+zope.interface==5.1.0
