--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,10 +4,12 @@ async-timeout==3.0.1
 attrs==19.3.0
 autobahn==20.6.1
 Automat==20.2.0
+awscli==1.18.150
 awsebcli==3.19.2
 bcrypt==3.2.0
 blessed==1.17.12
-botocore==1.19.47
+boto3==1.15.9
+botocore==1.18.9
 cached-property==1.5.2
 cement==2.8.2
 certifi==2020.4.5.2
@@ -30,6 +32,7 @@ docker==4.4.1
 docker-compose==1.25.5
 dockerpty==0.4.1
 docopt==0.6.2
+docutils==0.15.2
 future==0.16.0
 hiredis==1.0.1
 hyperlink==19.0.0
@@ -57,6 +60,8 @@ pytz==2020.1
 PyYAML==5.3.1
 requests==2.23.0
 requests-oauthlib==1.3.0
+rsa==4.5
+s3transfer==0.3.3
 semantic-version==2.5.0
 service-identity==18.1.0
 six==1.15.0
