--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,8 +13,11 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.5.3",
     "date-fns": "^2.16.1",
+    "jquery": "^3.5.1",
+    "popper.js": "^1.16.1",
     "rc-queue-anim": "^1.8.5",
     "react": "^17.0.1",
+    "react-bingmaps": "^3.6.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
     "react-infinite-scroll-component": "^5.1.0",
